Update delivery time to hours instead of days

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
                 <div class="feature-card">
                     <div class="feature-icon">⚡</div>
                     <h4>מהירות ביצוע</h4>
-                    <p>החזרת תוצאות תוך 3-5 ימי עבודה</p>
+                    <p>החזרת תוצאות תוך שעות בודדות</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">✓</div>
