Update hero section with detailed service description

--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,8 @@
     <section class="hero" id="heroSection">
         <div class="container">
             <div class="hero-content">
-                <h2>חישוב דירוג אנרגטי לבניינים</h2>
-                <p class="hero-subtitle">שירות מקצועי ומהיר לחישוב דירוג אנרגטי עפ"י תקן ת"י 5282</p>
+                <h2>חישוב דירוג אנרגטי לבנייני מגורים</h2>
+                <p class="hero-subtitle">שירות מקצועי ומהיר לקביעת דירוג אנרגטי עפ"י תקן ת"י 5282 חלק 1 בשיטה התפקודית בלי צורך למדל בעצמכם.</p>
                 <button class="btn btn-large btn-primary" onclick="showOrderForm()">הזמן חישוב עכשיו</button>
             </div>
         </div>
