Remove subtitle from footer

--- a/public/index.html
+++ b/public/index.html
@@ -146,7 +146,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2025 NEXA - יעוץ אנרגטי מתקדם. כל הזכויות שמורות.</p>
+            <p>&copy; 2025 NEXA. כל הזכויות שמורות.</p>
         </div>
     </footer>
 
